terraform/firewall.tf
// security group for drupal instance
resource "aws_security_group" "drupal_sg" {
  vpc_id  = "${aws_vpc.compucorp_vpc.id}"
  name    = "Drupal_security_group"
  description = "Security group for drupal instance"

  // This cidr_blocks for this should be set to a pre-defined set of IP's address for security measures.
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }

  // Allows connection on port 80(HTTP) from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }

  // Allows connection on port 443 (HTTPS) from anywhere
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }

  // Allows connection on port 3306(MySQL) from anywhere
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

}
